<resources>
    <string name="app_name">پونیلا</string>
    <string name="ponila_host">ponila.com</string>
    <string name="account_type">Ponila</string>
    <string name="title_activity_main">پونیلا</string>
    <string name="title_activity_collection">دفتر %s</string>
    <string name="title_activity_post_likers">پسندها</string>
    <string name="title_activity_others_profile">@string/app_name</string>
    <string name="title_activity_setting">پیکربندی</string>
    <string name="title_activity_reposts_list">گردآوری ها</string>
    <string name="title_activity_comments_list">نظرها</string>
    <string name="title_activity_sign_up_login">پونیلا</string>
    <string name="title_activity_member_faved_posts">برگه‌های پسند شده</string>
    <string name="title_activity_member_posts">برگه‌های %s</string>
    <string name="title_activity_member_friends">دوستان</string>
    <string name="title_activity_member_followers">دنبال کنندگان</string>
    <string name="title_activity_collection_list">دفترها</string>
    <string name="title_activity_member_collections" formatted="false">دفترها</string>
    <string name="title_activity_member_followed_collections" formatted="false">دفترهای دنبال شده</string>
    <string name="title_activity_circles_management">مدیریت محفل‌ها</string>
    <string name="title_activity_edit_interests">@string/interest</string>
    <string name="title_activity_application_notification"> اعلان های برنامه</string>
    <string name="title_activity_email_notification">اعلان های رایانامه</string>
    <string name="title_activity_profile_setting">تنظیمات نمایه</string>
    <string name="title_activity_frames_management">"مدیریت دسته‌ها "</string>
    <string name="title_activity_post">@string/app_name</string>
    <string name="action_settings">پیکربندی</string>
    <string name="share">اشتراک گذاری</string>
    <string name="download">دریافت</string>
    <string name="report">گزارش</string>
    <string name="similar_posts">برگه‌های مشابه</string>
    <string name="weekly_recommended_posts">پیشنهاد هفتگی برگه</string>
    <string name="post">برگه</string>
    <string name="collection">دفتر</string>
    <string name="member">عضو</string>
    <string name="has_send_friend_request">به شما درخواست دوستی داده است</string>
    <string name="agree">می‌پذیرم</string>
    <string name="ignore">فعلا نه</string>
    <string name="follow_item">دنبال کن</string>
    <string name="unfollow_item">دنبال شده</string>
    <string name="my_notifs">اعلانات من</string>
    <string name="others_notifs">اعلانات دیگران</string>
    <string name="day_name">امروز</string>
    <string name="login">ورود</string>
    <string name="signup">ثبت نام</string>
    <string name="female">خانم</string>
    <string name="male">آقا</string>
    <string name="follower">دنبال کننده</string>
    <string name="signup_in_poinila">ثبت نام در پونیلا</string>
    <string name="login_in_poinila">ورود به پونیلا</string>
    <string name="welcome_text">جستجو لازم نیست، با پونیلا یک دنیای جدید برای کشف مطالب مورد علاقه ات داری.</string>
    <string name="name">نام و نام خانوادگی</string>
    <string name="saved_in">ثبت شده در</string>
    <string name="subscribe">پیگیری</string>
    <string name="select_collection">انتخاب دفتر</string>
    <string name="first_shared_in">اولین نشر در دفتر</string>
    <string name="favorites_formatted" formatted="false">%d پسند</string>
    <string name="reposts_formatted" formatted="false">%d گردآوری</string>
    <string name="comments_formatted" formatted="false">%d نظر</string>
    <string name="new_posts_formatted">%d برگه‌ی جدید</string>
    <string name="posts_formatted">(%d برگه)</string>
    <string name="plus_formatted" formatted="false">+%d</string>
    <string name="x_outof_y_formatted" formatted="false">%d از %d</string>
    <string name="member_collections_formatted" formatted="false">دفترهای %s</string>
    <string name="insert_comment_hint">لطفا پیام خود را وارد کنید …</string>
    <string name="hint_description">@string/description</string>
    <string name="hint_post_caption">عنوان برگه</string>
    <string name="hint_post_content">متن برگه</string>
    <string name="hint_collection_caption">عنوان دفتر</string>
    <string name="hint_collection_description">توضیح دفتر</string>
    <string name="hint_email">@string/email</string>
    <string name="hint_post_summary">خلاصه برگه</string>
    <string name="hint_old_password">گذرواژه پیشین</string>
    <string name="hint_password">@string/password</string>
    <string name="hint_confirm_password">@string/confirm_password</string>
    <string name="hint_last_name">@string/last_name</string>
    <string name="hint_first_name">@string/first_name</string>
    <string name="hint_message">پیغام دعوت</string>
    <string name="post_contentdescription">post_image</string>
    <string name="login_faild">ورود امکان پذیر نیست</string>
    <string name="change_user_pass_fail">تغییر نام کاربری و رمز عبور ناموفق بود</string>
    <string name="error_required_field">این فیلد الزامی است</string>
    <string name="email_error">به صورت یک ایمیل مانند aa@bbb.ccc</string>
    <string name="terms_conditions"><![CDATA[تمامی <a href=”\http://ponila.com/terms\>قوانین و شرایط استفاده</a> را می‌پذیرم.]]></string>
    <string name="signup_faild">ثبت نام امکان پذیر نیست</string>
    <string name="first_name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="username">نام کاربری</string>
    <string name="email">ایمیل</string>
    <string name="email_change">تغییر ایمیل</string>
    <string name="password">گذرواژه</string>
    <string name="report_hint">متن خود را وارد نمایید</string>
    <string name="confirm_password">تائید گذرواژه</string>
    <string name="other_settings">موارد دیگر</string>
    <string name="profile">نمایه</string>
    <string name="phone">تلفن</string>
    <string name="phone_change">تغییر شماره</string>
    <string name="gender">جنسیت</string>
    <string name="website">وبگاه</string>
    <string name="website_address">آدرس وبگاه</string>
    <string name="manage_circle">مدیریت محفل ها</string>
    <string name="app_notifs">اعلان های برنامه</string>
    <string name="email_notifs">اعلان های رایانامه</string>
    <string name="add_collection">افزودن دفتر</string>
    <string name="add_post">افزودن برگه</string>
    <string name="add_post_from_site">افزودن برگه از وبگاه</string>
    <string name="submit">تائید</string>
    <string name="cancel">انصراف</string>
    <string name="select_interests">انتخاب علاقه‌مندی‌</string>
    <string name="select_topic">انتخاب موضوع</string>
    <string name="select_circle">انتخاب محفل</string>
    <string-array name="comment_options">
        <item>@string/remove</item>
    </string-array>
    <string-array name="tab_titles">
        <item>@string/dashboard</item>
        <item>@string/following_collections</item>
        <item>@string/search</item>
        <item>@string/notifications</item>
        <item>@string/profile</item>
    </string-array>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="approve_send_friend_request">آیا مطمئن هستید که می خواهید به ایشان درخواست دوستی بفرستید؟</string>
    <string name="accept_friend_request">آیا مطمئن هستید که میخواهید درخواست دوستی ایشان را بپذیرید؟</string>
    <string name="friend_request">درخواست دوستی</string>
    <string name="text">متن</string>
    <string name="image">عکس</string>
    <string name="video">ویدیو</string>
    <string name="description">توضیح</string>
    <string name="tag">برچسب</string>
    <string name="new_post">برگه‌ی جدید</string>
    <string name="create">ایجاد</string>
    <string name="new_collection">دفتر جدید</string>
    <string name="create_new_collection">ایجاد دفتر جدید</string>
    <string name="uninstall_old_app_title">پاک کردن نسخه قدیمی پونیلا</string>
    <string name="uninstall_old_app_content">نسخه قدیمی پونیلا روی دستگاه شما نصب است. آیا میخواهید آن را پاک کنید؟</string>
    <string name="test_url">http://mirceaeliade.wikispaces.com/file/view/Prince_of_Persia_The_Two_Thrones_wallpaper9.jpg/50238065/Prince_of_Persia_The_Two_Thrones_wallpaper9.jpg</string>
    <string name="website_post">برگه از وبگاه</string>
    <string name="create_text_post">برگه متنی از وبگاه</string>
    <string name="error_invalid_url">قالب آدرس صحیح نیست</string>
    <string name="error_no_protocol">پروتکل آدرس مشخص نشده است</string>
    <string name="wrong_protocol">پروتکل آدرس باید http یا https باشد</string>
    <string name="error_no_image_found">عکسی یافت نشد</string>
    <string name="select_subject">انتخاب موضوع</string>
    <string name="remove">حذف</string>
    <string name="favorited">پسند شده</string>
    <string name="friend">دوست</string>
    <string name="follows">دنبال می‌کند</string>
    <string name="interest">علاقه‌ها</string>
    <string name="repost_by">بازگردآوری توسط</string>
    <string name="created_by">گردآوری توسط</string>
    <string name="collected_in">ثبت شده در</string>
    <string name="select_frame">انتخاب دسته</string>
    <string name="repost_post">بازگردآوری برگه</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_interest">علاقه‌ی جدید</string>
    <string name="title_activity_select_interests_actvity">انتخاب علاقه‌مندی</string>
    <string name="circle_members_management">مدیریت اعضای محفل</string>
    <string name="finish">پایان</string>
    <string name="new_circle">محفل جدید</string>
    <string name="edit_circle_name">تغییر نام محفل</string>
    <string name="confirm_delete_circle">آیا می خواهید این حلقه را حذف کنید؟</string>
    <string name="frames_management">مدیریت دسته‌ها</string>
    <string name="deactivate">غیرفعال کردن حساب کاربری</string>
    <string name="tutorial">راهنما</string>
    <string name="about_poinila">درباره‌ی پونیلا</string>
    <string name="new_frame">دسته‌ی جدید</string>
    <string name="frame_members_management">مدیریت اعضای دسته</string>
    <string name="edit_frame_name">تغییر نام دسته</string>
    <string name="confirm_delete_frame">آیا مطمئن هستید، می خواهید این دسته را حذف کنید؟</string>
    <string name="error_password">گذرواژه حداقل باید 8 حرف شامل 2 عدد باشد</string>
    <string name="error_confirm_password">تکرار گذرواژه با اصل آن یکسان نیست</string>
    <string name="save">ذخیره</string>
    <string name="frames">دسته ها</string>
    <string name="frame">دسته</string>
    <string name="frame_about">شما میتوانید دفترهایی را که دنبال می کنید دسته بندی کنید تا هنگام مشاهده لیست دفترهای دنبال شده راحت تر به آنجه می خواهید دسترسی پیدا کنید.</string>
    <string name="circle_about">شما میتوانید محفلی از دوستانتان ایجاد کنید و دفترهایتان را تنها برای تعدادی از آنان قابل مشاهده کنید</string>
    <string name="circle">محفل</string>
    <string name="error_no_frame_exist">شما دسته ای نساخته اید</string>
    <string name="title_activity_fragment_host">FragmentHostActivity</string>
    <string name="requested_to_be_your_friend">به شما درخواست دوستی داده است.</string>
    <string name="accepted_your_friendship">درخواست دوستی شما را پذیرفت.</string>
    <string name="profile_change_not_found">هنوز اطلاعات کاربر دریافت نشده است!</string>
    <string name="download_error">خطا در دریافت فایل</string>
    <string name="notif_comment_after_you_singular">زیر برگه‌ای که شما نظر داده‌اید نظر داده است.</string>
    <string name="notif_comment_after_you_plural">زیر برگه‌ای که شما نظر داده‌اید نظر داده اند.</string>
    <string name="private_word">خصوصی</string>
    <string name="invite_to_poinila_formatted">دعوت به پونیلا (%d)</string>
    <string name="fullname">نام و نام خانوادگی</string>
    <string name="verification_code">کد فعالسازی</string>
    <string name="ask_if_user_likes_app">از پونیلا راضی هستید؟</string>
    <string name="not_sure">مطمئن نیستم</string>
    <string name="no_and_neverAskMeAgain">خیر، دیگر نپرس</string>
    <string name="rate_ponila_in_market">به پونیلا امتیاز می دهید؟</string>
</resources>