<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorAccent">

    <TextView
        android:id="@+id/ask_if_user_rates_us_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="?attr/dialogPreferredPadding"
        tools:text="به پونیلا در کافه بازار امتیاز بدهید"
        android:text="@string/rate_ponila_in_market"
        android:textColor="?android:attr/textColorPrimaryInverse" />

    <Button
        android:id="@+id/positive_button"
        style="@style/askForRateButtons"
        android:layout_alignParentRight="true"
        android:layout_below="@id/ask_if_user_rates_us_text_view"
        android:text="@string/yes" />

    <Button
        android:id="@+id/negative_button"
        style="@style/askForRateButtons"
        android:layout_below="@id/ask_if_user_rates_us_text_view"
        android:layout_toLeftOf="@id/positive_button"
        android:text="@string/no_and_neverAskMeAgain" />

    <Button
        android:id="@+id/dont_know_button"
        style="@style/askForRateButtons"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ask_if_user_rates_us_text_view"
        android:text="@string/ignore" />

</RelativeLayout>