<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_lvl1ohalf"
    android:background="@drawable/bg_texture">

    <TextView
        style="@style/wrap_wrap.large_text.boulder_text"
        android:text="@string/select_interests"
        android:layout_alignParentRight="true"
        android:id="@+id/dialog_title"
        />

    <!--x out of y. User formatted string x_outof_y-->
    <TextView
        style="@style/wrap_wrap.large_text"
        android:id="@+id/selected_count"
        tools:text="3 از 5"
        android:layout_alignBaseline="@id/dialog_title"
        />

    <View android:layout_width="match_parent"
        android:layout_height="@dimen/separator_thickness"
        android:background="@color/nobel"
        android:layout_marginTop="@dimen/margin_lvl2"
        android:layout_marginBottom="@dimen/margin_lvl1ohalf"
        android:layout_below="@id/dialog_title"
        android:id="@+id/divider"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_below="@id/divider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view"
        android:layout_above="@+id/buttons_container"
        tools:listitem="@layout/selectable_interest" />

    <!--Buttons-->
    <LinearLayout
        style="@style/match_wrap"
        android:layout_marginTop="@dimen/margin_lvl1"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:id="@+id/buttons_container">

        <Button
            android:id="@+id/submit"
            android:text="@string/submit"
            style="@style/positive_dialog_button"/>

        <android.support.v4.widget.Space
            android:layout_width="@dimen/margin_lvl1"
            android:layout_height="1px" />

        <Button
            android:id="@+id/cancel"
            android:text="@string/cancel"
            style="@style/negative_dialog_button"/>
    </LinearLayout>

</RelativeLayout>
